Giving each component its own URL

--- a/accordion.html
+++ b/accordion.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>phew</title>
+    <title>phew | accordion</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="js/tabs.js"></script>
+    <script type="text/javascript" src="js/accordion.js"></script>
   </head>
   <body>
     <div class="row">
@@ -29,6 +30,15 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Accordion</h1>
+        <dl class="accordion">
+          <dt><a href="#">The first fold</a></dt>
+          <dd>The content for the first fold.</dd>
+          <dt><a href="#">The second fold</a></dt>
+          <dd>The content for the second fold.</dd>
+          <dt><a href="#">The third fold</a></dt>
+          <dd>The content for the third fold.</dd>
+        </dl>
       </div>
     </div>
   </body>
