--- a/menu.html
+++ b/menu.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>phew</title>
+    <title>phew | menu</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="js/tabs.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
   </head>
   <body>
     <div class="row">
@@ -29,6 +30,27 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Menu</h1>
+        <ul class="inline">
+          <li class="right">
+            <div class="right menu"><a href="#">Right</a>
+              <ul>
+                <li><a href="#">First action</a></li>
+                <li><a href="#">Second action</a></li>
+                <li><a href="#">Third action</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="menu"><a href="#">Default</a>
+              <ul>
+                <li><a href="#">First action</a></li>
+                <li><a href="#">Second action</a></li>
+                <li><a href="#">Third action</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
