--- a/modal.html
+++ b/modal.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>phew</title>
+    <title>phew | modal</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="js/tabs.js"></script>
+    <script type="text/javascript" src="js/modal.js"></script>
   </head>
   <body>
     <div class="row">
@@ -29,6 +30,17 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Modal</h1>
+        <div class="message">
+          <code>a[data-modal-id]</code> and <code>.modal[id]</code> need to match.
+          It doesn’t matter where the elements are placed in the document.
+        </div>
+        <p><a href="#" data-modal-id="the-modal">Opens a modal</a></p>
+        <div id="the-modal" class="modal">
+          <h2><a href="#" class="close"></a>The modal title</h2>
+          <p>Are you sure you want to do something bad?</p><a href="#" class="cancel">Cancel</a>
+          <button class="alert">Do it</button>
+        </div>
       </div>
     </div>
   </body>
