--- a/breadcrumbs.html
+++ b/breadcrumbs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>phew</title>
+    <title>phew | breadcrumbs</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
@@ -29,6 +29,12 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Breadcrumbs</h1>
+        <ul class="breadcrumbs">
+          <li><a href="#">Behold</a></li>
+          <li><a href="#">the</a></li>
+          <li><a href="#" class="active">Breadcrumbs</a></li>
+        </ul>
       </div>
     </div>
   </body>
