--- a/messages.html
+++ b/messages.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>phew</title>
+    <title>phew | messages</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
@@ -29,6 +29,11 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Messages</h1>
+        <div class="message">This is the default message. <a href="#">Do something</a></div>
+        <div class="caution message">This is the caution message. <a href="#">Do something</a></div>
+        <div class="alert message">This is the alert message. <a href="#">Do something</a></div>
+        <div class="success message">This is the success message. <a href="#">Do something</a></div>
       </div>
     </div>
   </body>
