--- a/spinner.html
+++ b/spinner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>phew</title>
+    <title>phew | spinner</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
@@ -29,6 +29,9 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Spinner</h1>
+        <div class="message">Simply remove the <code>.loading</code> class when AJAX is done.</div>
+        <h1 class="loading"></h1>
       </div>
     </div>
   </body>
