--- a/type.html
+++ b/type.html
@@ -14,6 +14,7 @@
       <div class="col-2 medium-3 small-4">
         <nav>
           <ul>
+            <li><a href="index.html">Phew</a></li>
             <li><a href="accordion.html">Accordion</a></li>
             <li><a href="breadcrumbs.html">Breadcrumbs</a></li>
             <li><a href="buttons.html">Buttons</a></li>
@@ -30,10 +31,7 @@
       </div>
       <div class="col-10 medium-9 small-8">
         <h1>Type</h1>
-        <ul class="tabs inline">
-          <li><a href="#hierarchy">Hierarchy</a></li>
-          <li><a href="#lists">Lists</a></li>
-        </ul>
+        <div class="tabs inline"><a href="#hierarchy">Hierarchy</a><a href="#lists">Lists</a></div>
         <div id="hierarchy" class="tab-content">
           <h1>Headline 1</h1>
           <h2>Headline 2</h2>
