--- a/form.html
+++ b/form.html
@@ -16,6 +16,7 @@
       <div class="col-2 medium-3 small-4">
         <nav>
           <ul>
+            <li><a href="index.html">Phew</a></li>
             <li><a href="accordion.html">Accordion</a></li>
             <li><a href="breadcrumbs.html">Breadcrumbs</a></li>
             <li><a href="buttons.html">Buttons</a></li>
@@ -37,13 +38,7 @@
           and use this library instead.
         </div>
         <div class="row">
-          <div class="col-3">
-            <ul class="tabs">
-              <li><a href="#email-address">Email address</a></li>
-              <li><a href="#select">Select</a></li>
-              <li><a href="#more-types">More types</a></li>
-            </ul>
-          </div>
+          <div class="col-3 tabs"><a href="#email-address">Email address</a><a href="#select">Select</a><a href="#more-types">More types</a></div>
           <div class="col-9">
             <div id="email-address" class="tab-content">
               <h2>Email address</h2>
