--- a/grid.html
+++ b/grid.html
@@ -14,6 +14,7 @@
       <div class="col-2 medium-3 small-4">
         <nav>
           <ul>
+            <li><a href="index.html">Phew</a></li>
             <li><a href="accordion.html">Accordion</a></li>
             <li><a href="breadcrumbs.html">Breadcrumbs</a></li>
             <li><a href="buttons.html">Buttons</a></li>
