--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="col-2 medium-3 small-4">
         <nav>
           <ul>
+            <li><a href="index.html">Phew</a></li>
             <li><a href="accordion.html">Accordion</a></li>
             <li><a href="breadcrumbs.html">Breadcrumbs</a></li>
             <li><a href="buttons.html">Buttons</a></li>
@@ -29,6 +30,12 @@
         </nav>
       </div>
       <div class="col-10 medium-9 small-8">
+        <h1>Phew</h1>
+        <ul>
+          <li>Click links on the left to look at demos.</li>
+          <li><a href="form.html">Look at Form</a> to see default (vertical) tabs.</li>
+          <li><a href="type.html">Look at Type</a> to see horizontal (inline) tabs.</li>
+        </ul>
       </div>
     </div>
   </body>
