--- a/type.html
+++ b/type.html
@@ -14,7 +14,7 @@
       <div class="col-2 medium-3 small-4">
         <nav>
           <ul>
-            <li><a href="index.html">Phew</a></li>
+            <li><a href="./">Phew</a></li>
             <li><a href="accordion.html">Accordion</a></li>
             <li><a href="breadcrumbs.html">Breadcrumbs</a></li>
             <li><a href="buttons.html">Buttons</a></li>
@@ -69,6 +69,14 @@
                 <li>List item 2</li>
                 <li>List item 3</li>
               </ol>
+            </div>
+            <div class="col-4">
+              <h4><code>ul.listless</code></h4>
+              <ul class="listless">
+                <li>List item 1</li>
+                <li>List item 2</li>
+                <li>List item 3</li>
+              </ul>
             </div>
           </div>
         </div>
