--- a/form.html
+++ b/form.html
@@ -10,13 +10,14 @@
     <script type="text/javascript" src="js/tabs.js"></script>
     <script type="text/javascript" src="js/disabled.js"></script>
     <script type="text/javascript" src="js/form.js"></script>
+    <script type="text/javascript" src="js/switch.js"></script>
   </head>
   <body>
     <div class="row">
       <div class="col-2 medium-3 small-4">
         <nav>
           <ul>
-            <li><a href="index.html">Phew</a></li>
+            <li><a href="./">Phew</a></li>
             <li><a href="accordion.html">Accordion</a></li>
             <li><a href="breadcrumbs.html">Breadcrumbs</a></li>
             <li><a href="buttons.html">Buttons</a></li>
@@ -38,8 +39,61 @@
           and use this library instead.
         </div>
         <div class="row">
-          <div class="col-3 tabs"><a href="#email-address">Email address</a><a href="#select">Select</a><a href="#more-types">More types</a></div>
+          <div class="col-3 tabs"><a href="#checkboxes">Checkboxes</a><a href="#email-address">Email address</a><a href="#more-types">More types</a><a href="#radios">Radios</a><a href="#select">Select</a></div>
           <div class="col-9">
+            <div id="checkboxes" class="tab-content">
+              <h2>Checkboxes</h2>
+              <div class="message"><code>[data-match-id]</code> needs to match an <code>input[id]</code> for confirmation fields.</div>
+              <form novalidate>
+                <div class="row">
+                  <div class="col-6">
+                    <ul class="listless">
+                      <li>Plain checkboxes</li>
+                      <li>
+                        <label>
+                          <input type="checkbox" name="plain-checkboxes"> Foo
+                        </label>
+                      </li>
+                      <li>
+                        <label>
+                          <input type="checkbox" name="plain-checkboxes"> Bar
+                        </label>
+                      </li>
+                      <li>
+                        <label>
+                          <input type="checkbox" name="plain-checkboxes"> Baz
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col-6">
+                    <ul class="listless">
+                      <li>Switches</li>
+                      <li>
+                        <label class="switch">
+                          <input type="checkbox" name="switches"> Foo
+                        </label>
+                      </li>
+                      <li>
+                        <label class="switch">
+                          <input type="checkbox" name="switches"> Bar
+                        </label>
+                      </li>
+                      <li>
+                        <label class="switch">
+                          <input type="checkbox" name="switches"> Baz
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <button type="submit">Test checkboxes</button>
+                  </div>
+                </div>
+              </form>
+            </div>
             <div id="email-address" class="tab-content">
               <h2>Email address</h2>
               <div class="message"><code>[data-match-id]</code> needs to match an <code>input[id]</code> for confirmation fields.</div>
@@ -62,7 +116,62 @@
                 </div>
                 <div class="row">
                   <div class="col-12">
-                    <button type="submit">Test email addresses</button>
+                    <button type="submit">Test email address</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div id="more-types" class="tab-content">
+              <h2>More types</h2>
+              <form novalidate>
+                <div class="row">
+                  <div class="col-6">
+                    <label>Some required text
+                      <div class="required">Required</div>
+                      <input type="text" required>
+                      <div class="error">Enter some text</div>
+                    </label>
+                  </div>
+                  <div class="col-6">
+                    <label>An optional loose numeric value
+                      <input type="numeric">
+                      <div class="error">Enter a numeric value</div>
+                    </label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <button type="submit">Test these types</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div id="radios" class="tab-content">
+              <h2>Radios</h2>
+              <div class="message">Radios should just default to the first option. “Required” is implied.</div>
+              <form novalidate>
+                <div class="row">
+                  <div class="col-12">
+                    <ul class="listless">
+                      <li>Radio star
+                        <div class="required">Required</div>
+                      </li>
+                      <li>
+                        <label>
+                          <input type="radio" name="the-radio" checked> Foo
+                        </label>
+                      </li>
+                      <li>
+                        <label>
+                          <input type="radio" name="the-radio"> Bar
+                        </label>
+                      </li>
+                      <li>
+                        <label>
+                          <input type="radio" name="the-radio"> Baz
+                        </label>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </form>
@@ -91,31 +200,6 @@
                         <option>baz</option>
                       </select>
                     </label>
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div id="more-types" class="tab-content">
-              <h2>More types</h2>
-              <form novalidate>
-                <div class="row">
-                  <div class="col-6">
-                    <label>Some required text
-                      <div class="required">Required</div>
-                      <input type="text" required>
-                      <div class="error">Enter some text</div>
-                    </label>
-                  </div>
-                  <div class="col-6">
-                    <label>An optional loose numeric value
-                      <input type="numeric">
-                      <div class="error">Enter a numeric value</div>
-                    </label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <button type="submit">Test these types</button>
                   </div>
                 </div>
               </form>
