--- a/form.html
+++ b/form.html
@@ -43,48 +43,104 @@
           <div class="col-9">
             <div id="checkboxes" class="tab-content">
               <h2>Checkboxes</h2>
-              <div class="message"><code>[data-match-id]</code> needs to match an <code>input[id]</code> for confirmation fields.</div>
+              <div class="message">Use <code>fieldset[required]</code> to require a selection.</div>
               <form novalidate>
                 <div class="row">
                   <div class="col-6">
-                    <ul class="listless">
-                      <li>Plain checkboxes</li>
-                      <li>
-                        <label>
-                          <input type="checkbox" name="plain-checkboxes"> Foo
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input type="checkbox" name="plain-checkboxes"> Bar
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input type="checkbox" name="plain-checkboxes"> Baz
-                        </label>
-                      </li>
-                    </ul>
+                    <fieldset>
+                      <legend>Checkboxes</legend>
+                      <ul>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="checkboxes"> Foo
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="checkboxes"> Bar
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="checkboxes"> Baz
+                          </label>
+                        </li>
+                      </ul>
+                    </fieldset>
                   </div>
                   <div class="col-6">
-                    <ul class="listless">
-                      <li>Switches</li>
-                      <li>
-                        <label class="switch">
-                          <input type="checkbox" name="switches"> Foo
-                        </label>
-                      </li>
-                      <li>
-                        <label class="switch">
-                          <input type="checkbox" name="switches"> Bar
-                        </label>
-                      </li>
-                      <li>
-                        <label class="switch">
-                          <input type="checkbox" name="switches"> Baz
-                        </label>
-                      </li>
-                    </ul>
+                    <fieldset required>
+                      <legend>Checkboxes
+                        <div class="required">Required</div>
+                      </legend>
+                      <ul>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="required-checkboxes"> Foo
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="required-checkboxes"> Bar
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input type="checkbox" name="required-checkboxes"> Baz
+                          </label>
+                        </li>
+                      </ul>
+                    </fieldset>
+                    <div class="error">Select at least one checkbox</div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-6">
+                    <fieldset>
+                      <legend>Switches</legend>
+                      <ul>
+                        <li>
+                          <label class="switch">
+                            <input type="checkbox" name="switches"> Foo
+                          </label>
+                        </li>
+                        <li>
+                          <label class="switch">
+                            <input type="checkbox" name="switches"> Bar
+                          </label>
+                        </li>
+                        <li>
+                          <label class="switch">
+                            <input type="checkbox" name="switches"> Baz
+                          </label>
+                        </li>
+                      </ul>
+                    </fieldset>
+                  </div>
+                  <div class="col-6">
+                    <fieldset required>
+                      <legend>Switches
+                        <div class="required">Required</div>
+                      </legend>
+                      <ul>
+                        <li>
+                          <label class="switch">
+                            <input type="checkbox" name="required-switches"> Foo
+                          </label>
+                        </li>
+                        <li>
+                          <label class="switch">
+                            <input type="checkbox" name="required-switches"> Bar
+                          </label>
+                        </li>
+                        <li>
+                          <label class="switch">
+                            <input type="checkbox" name="required-switches"> Baz
+                          </label>
+                        </li>
+                      </ul>
+                    </fieldset>
+                    <div class="error">Select at least one switch</div>
                   </div>
                 </div>
                 <div class="row">
@@ -152,26 +208,28 @@
               <form novalidate>
                 <div class="row">
                   <div class="col-12">
-                    <ul class="listless">
-                      <li>Radio star
+                    <fieldset>
+                      <legend>Radio
                         <div class="required">Required</div>
-                      </li>
-                      <li>
-                        <label>
-                          <input type="radio" name="the-radio" checked> Foo
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input type="radio" name="the-radio"> Bar
-                        </label>
-                      </li>
-                      <li>
-                        <label>
-                          <input type="radio" name="the-radio"> Baz
-                        </label>
-                      </li>
-                    </ul>
+                      </legend>
+                      <ul>
+                        <li>
+                          <label>
+                            <input type="radio" name="the-radio" checked> Foo
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input type="radio" name="the-radio"> Bar
+                          </label>
+                        </li>
+                        <li>
+                          <label>
+                            <input type="radio" name="the-radio"> Baz
+                          </label>
+                        </li>
+                      </ul>
+                    </fieldset>
                   </div>
                 </div>
               </form>
